# twenty-mcp

./: .bumpversion.cfg  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  compose.yml  mcp.compose.yml
docs/: concepts.md  deployment.md  index.md  installation.md  overview.md  platform.md  usage.md
installation/: index.html
overview/: index.html
platform/: index.html
prompts/: main_agent.md
search/: search_index.json
tests/: conftest.py  test_api_client.py  test_api_coverage.py  test_api_extensions.py  test_concept_parity.py  test_discovery.py  test_init_dynamics.py  test_mcp_server.py  test_startup.py  test_twenty_gql.py
twenty_mcp/: __init__.py  __main__.py  agent_server.py  api_client.py  auth.py  mcp_config.json  mcp_server.py  models.py  twenty_gql.py
twenty_mcp/agent_data/: IDENTITY.md
twenty_mcp/api/: __init__.py  api_client_base.py  api_client_crm.py  api_client_metadata.py  api_client_oauth.py
twenty_mcp/mcp/: __init__.py  mcp_crm.py  mcp_graphql.py  mcp_metadata.py  mcp_oauth.py
twenty_mcp/prompts/: main_agent.json
twenty_mcp/skills/twenty-starter/: SKILL.md
usage/: index.html
