[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build_meta = "setuptools.build_meta"

[project]
name = "twenty-mcp"
version = "0.15.0"
description = "Twenty CRM REST/GraphQL MCP Server for Agentic AI!"
readme = "README.md"
classifiers = [ "Development Status :: 4 - Beta", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11, <3.14"
dependencies = [ "agent-utilities>=0.16.0",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=0.16.0",]
agent = [ "agent-utilities[agent,logfire]>=0.16.0",]
all = [ "agent-utilities[mcp,agent,logfire]>=0.16.0",]
test = [ "pytest-xdist>=3.6.0", "pytest", "pytest-asyncio", "pytest-cov",]

[project.scripts]
twenty-mcp = "twenty_mcp.mcp_server:mcp_server"
twenty-agent = "twenty_mcp.agent_server:agent_server"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [ "pytest-timeout>=2.4.0",]

[tool.setuptools.package-data]
twenty_mcp = [ "mcp_config.json", "agent_data/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]
